--- a/app/src/main/res/layout/book_list_content_even.xml
+++ b/app/src/main/res/layout/book_list_content_even.xml
@@ -5,7 +5,7 @@
     android:layout_marginTop="2dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:background="#eeeeee"
+    android:background="#d8dae7"
     android:padding="15dp"
     android:orientation="vertical">
 
