--- a/app/src/main/res/layout/book_list_content.xml
+++ b/app/src/main/res/layout/book_list_content.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
     android:layout_marginLeft="10dp"
+    android:layout_marginTop="2dp"
     android:layout_marginRight="10dp"
     android:background="#eeeeee"
-    android:padding="15dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="15dp"
+    android:paddingTop="15dp"
+    android:paddingRight="15dp">
 
     <TextView
         android:id="@+id/id_text"
