--- a/app/src/main/res/layout/book_list_content_even.xml
+++ b/app/src/main/res/layout/book_list_content_even.xml
@@ -6,7 +6,9 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:background="#d8dae7"
-    android:padding="15dp"
+    android:paddingLeft="15dp"
+    android:paddingTop="15dp"
+    android:paddingRight="15dp"
     android:orientation="vertical">
 
     <TextView
