--- a/app/src/main/res/layout/book_list_content.xml
+++ b/app/src/main/res/layout/book_list_content.xml
@@ -25,7 +25,7 @@
             android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|end"
             android:layout_marginTop="15dp"
             android:textAppearance="?attr/textAppearanceListItem" />
     </android.support.v7.widget.CardView>
