--- a/app/src/main/res/layout/book_list_content_odd.xml
+++ b/app/src/main/res/layout/book_list_content_odd.xml
@@ -13,6 +13,10 @@
         card_view:cardElevation="2dp"
         card_view:contentPadding="10dp"
         card_view:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
         <TextView
             android:id="@+id/id_text"
@@ -27,6 +31,7 @@
             android:layout_gravity="bottom|right"
             android:layout_marginTop="15dp"
             android:textAppearance="?attr/textAppearanceListItem" />
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
