--- a/app/src/main/res/layout-w900dp/book_list.xml
+++ b/app/src/main/res/layout-w900dp/book_list.xml
@@ -19,7 +19,8 @@
     -->
     <android.support.v4.widget.SwipeRefreshLayout  xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="@dimen/item_width"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/swipeContainer">
     <android.support.v7.widget.RecyclerView
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/item_list"
