--- a/app/src/main/res/layout-w900dp/book_list.xml
+++ b/app/src/main/res/layout-w900dp/book_list.xml
@@ -17,11 +17,11 @@
     master/detail flow.
     
     -->
-    <android.support.v4.widget.SwipeRefreshLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout  xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
         android:id="@+id/swipeContainer">
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/item_list"
         android:name="com.pla1.cifo.ahuesoa.pac1.ItemListFragment"
@@ -32,7 +32,7 @@
         app:layoutManager="LinearLayoutManager"
         tools:context="com.pla1.cifo.ahuesoa.pac1.BookListActivity"
         tools:listitem="@layout/book_list_content" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <FrameLayout
         android:id="@+id/item_detail_container"
