--- a/app/src/main/res/layout/book_list_content.xml
+++ b/app/src/main/res/layout/book_list_content.xml
@@ -11,7 +11,7 @@
     android:paddingTop="15dp"
     android:paddingRight="15dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
@@ -28,6 +28,6 @@
             android:layout_gravity="bottom|end"
             android:layout_marginTop="15dp"
             android:textAppearance="?attr/textAppearanceListItem" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
