--- a/app/src/main/res/layout/book_list_content_even.xml
+++ b/app/src/main/res/layout/book_list_content_even.xml
@@ -8,7 +8,7 @@
 
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -36,6 +36,6 @@
             android:layout_marginTop="15dp"
             android:textAppearance="?attr/textAppearanceListItem" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
