--- a/app/src/main/res/layout/book_list_content_odd.xml
+++ b/app/src/main/res/layout/book_list_content_odd.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="10dp"
     android:layout_marginRight="25dp">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         card_view:cardCornerRadius="4dp"
@@ -32,6 +32,6 @@
             android:layout_marginTop="15dp"
             android:textAppearance="?attr/textAppearanceListItem" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
