Drawer por debajo de la barra de notificaciones

--- a/app/src/main/res/layout/book_list.xml
+++ b/app/src/main/res/layout/book_list.xml
@@ -4,6 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/swipeContainer">
+    <FrameLayout
+        android:id="@+id/drawer_layout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+
 <androidx.recyclerview.widget.RecyclerView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,4 +27,5 @@
     app:layoutManager="LinearLayoutManager"
     tools:context=".BookListActivity"
     tools:listitem="@layout/book_list_content" />
+    </FrameLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
