--- a/app/src/main/res/layout-w900dp/book_list.xml
+++ b/app/src/main/res/layout-w900dp/book_list.xml
@@ -21,7 +21,14 @@
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
         android:id="@+id/swipeContainer">
-    <androidx.recyclerview.widget.RecyclerView
+        <FrameLayout
+            android:id="@+id/drawer_layout"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/item_list"
         android:name="com.pla1.cifo.ahuesoa.pac1.ItemListFragment"
@@ -32,6 +39,7 @@
         app:layoutManager="LinearLayoutManager"
         tools:context="com.pla1.cifo.ahuesoa.pac1.BookListActivity"
         tools:listitem="@layout/book_list_content" />
+        </FrameLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <FrameLayout
