--- a/app/src/main/res/xml/file_provider_path.xml
+++ b/app/src/main/res/xml/file_provider_path.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path
-        name="external_files" path="." />
+    <files-path
+        name="share" path="temporal">
+
+    </files-path>
 </paths>
