--- a/app/src/main/res/layout/content_web_view.xml
+++ b/app/src/main/res/layout/content_web_view.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".webView"
+    tools:context=".BuyActivity"
     tools:showIn="@layout/activity_web_view">
 
     <WebView
+        android:id="@+id/id_webView"
         android:layout_width="395dp"
         android:layout_height="587dp"
         android:layout_marginEnd="24dp"
